--- a/countdown.css
+++ b/countdown.css
@@ -8,7 +8,7 @@
 .main{
     width: 100%;
     height: 100vh;
-    background: url(bg.jpg) center center;
+    background: url(anny.jpg) center center;
     background-size: cover;
 }
 .overlay{
